<resources>
    <string name="app_name">AXDecor</string>
    <string name="tagEdad">Edad</string>
    <string name="tagPresupuesto">Prespuesto($)</string>
    <string name="ingresaDatos">Ingresa tus datos:</string>
    <string name="siguiente">Siguiente</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="descipcionIMNombre">Imagen para indicar nombre.</string>
    <string name="descipcionIMEdad">Imagen para indicar edad.</string>
    <string name="conocer">Queremos conocerte un poco más.</string>
    <string name="selectestilo">¿Qué estilo prefieres?</string>
    <string name="presupuesto">Presupuesto:</string>
    <string name="ListaPersonalidad">¿Cómo te describirias?</string>
    <string name="conceptosInicio">Veamos un pequeño tutorial</string>
    <string name="selectHabitacion">¿Qué habitación desearías decorar?</string>
    <string name="omitir">Omitir</string>
    <string name="conceptoTitulo">Empecemos con…</string>

    <string name="flecha_siguiente_paso">Siguiente paso</string>
    <string name="guardar_compartir">Guardar y compartir</string>
    <string name="cotizacion">Cotización</string>
    <string name="decoracion">Decoración</string>
    <string name="que_quiero">¿Qué quiero?</string>
    <string name="informacion">Información</string>
    <string name="atras">Atrás</string>
    <string name="selectmodo">Ahora solo selecciona un modo de decoración y comencemos a decorar!</string>
    <string name="abre">Abre Drawer</string>
    <string name="cierra">Cierra Drawer</string>

    <string name="preference_file_key_datos">com.apptt.axdecor.Datos_Usuario</string>
    <string name="user_Name">user_name</string>
    <string name="age_key">age_key</string>
    <string name="color_key">color_key</string>
    <string name="room_key">room_key</string>
    <string name="id_room_key">id_room_key</string>
    <string name="providers_key">providers_key</string>
    <string name="style_key">style_key</string>
    <string name="id_style_key">style_key</string>
    <string name="anim1_key">anim1_key</string>
    <string name="anim2_key">anim2_key</string>

    <string name="FAQ">Preguntas Frecuentes</string>
    <string name="Pregunta1">¿Diseño vs decoración?</string>
    <string name="Pregunta2">¿Cómo influyen los colores en mi decoración?</string>
    <string name="Pregunta3">¿Por qué debo jugar con los colores y su saturación?</string>
    <string name="Pregunta4">¿Debo elegir un estilo de decoración prediseñado?</string>

    <string name="Resp1">El diseño de interiores afecta tanto a lo elementos que lo componen como a la arquitectura, es decir, además de la estética, también hay que tener muy en cuenta la funcionalidad del espacio.
La decoración de interiores está más enfocada a lo estético, al amueblamiento y adornamiento del espacio.
</string>
    <string name="Resp2">Los colores están fuertemente relacionados con las emociones, es decir que pueden influir en cómo te sientes o cómo respondes hacia ellos, son capaces de crear climas y estilos maravillosos.
</string>
    <string name="Resp3">Aquí te va un ejemplo, el color rojo es muy intenso, evoca energía y entusiasmo, por lo que es recomendado para utilizarlo en habitaciones en donde constantemente estás activo, si quisieras utilizarlo en tu recámara, la recomendación sería utilizarlo con una tonalidad más baja como un rojo pastel, para crear un ambiente más relajado y tranquilo.
</string>
    <string name="Resp4">La respuesta es no, sin embargo en el mundo de la decoración existen muchos estilos, clásico, rústico, minimalista, por mencionar algunos, en los que te puedes guiar si es que aún no tienes una idea de cómo quieres decorar tu espacio.
</string>
    <string name="sugerenciaAmarillo">Es perfecto para agregar un detalle de brillo y alegría a tu espacio.
Combinan perfecto con tonalidades verdes, grises y violetas.
Son ideales para terrazas y cocinas
</string>
    <string name="sugerenciaAzul">Tradicional y conservador, en su tonalidades más oscuras se vuelve dinámico, y frío cuando se agrega blanco.

Los colores azules tienen efectos relajantes, por ello son perfectos para espacios en donde busques calma y refugio.
No es tan recomendable para una cocina.
</string>
    <string name="sugerenciaRojo">El color rojo es enérgico, cálido y de alto impacto, es ideal para aplicarlo en cocinas, espacios de entretenimiento o donde se busque promover la conversación e interacción. En el comedor puede resultar muy dramático por lo que se recomienda uno con menor saturación.
</string>
    <string name="sugerenciaVerde">Puede aplicarse para muchos estados de ánimo, pero en su forma más pura representa balance y frescura.
Cuando toma tonalidades azules se vuelve nítido y frío, por lo que es perfecto para utilizarse en recámaras y baños.
Es un color que funciona perfecto en la mayoría de los espacios, pero es ideas para la sala, dormitorios y oficinas.
</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cotizaciones">CotizacionesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
