<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/fondo"
        android:layout_height="match_parent"
        tools:context=".fragments.PreguntasFrecuentesFragment">

    <TextView
            android:id="@+id/pregunatsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/FAQ"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.1" />

            <ImageView
                    android:id="@+id/imQ1"
                    android:layout_width="55dp"
                    android:layout_height="49dp"
                    app:layout_constraintBottom_toBottomOf="@+id/btnR1"
                    app:layout_constraintStart_toStartOf="@+id/guideline12"
                    app:layout_constraintTop_toTopOf="@+id/btnR1"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/pregunta1" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnR1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Pregunta1"
                    app:layout_constraintEnd_toStartOf="@+id/guideline11"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/imQ1"
                    app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvResp1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/Resp1"
                    android:textColor="#706563"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/guideline11"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline12"
                    app:layout_constraintTop_toBottomOf="@+id/btnR1" />

            <ImageView
                    android:id="@+id/imQ2"
                    android:layout_width="51dp"
                    android:layout_height="0dp"
                    android:src="@drawable/pregunta2"
                    app:layout_constraintBottom_toBottomOf="@+id/btnR3"
                    app:layout_constraintStart_toStartOf="@+id/guideline12"
                    app:layout_constraintTop_toTopOf="@+id/btnR3"
                    app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnR3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/Pregunta2"
                    app:layout_constraintEnd_toStartOf="@+id/guideline11"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imQ2"
                    app:layout_constraintTop_toBottomOf="@+id/tvResp2" />

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvResp2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Resp2"
                    android:visibility="gone"
                    android:textColor="#706563"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toStartOf="@+id/guideline11"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline12"
                    app:layout_constraintTop_toBottomOf="@+id/btnR2" />

            <ImageView
                    android:id="@+id/imQ3"
                    android:layout_width="54dp"
                    android:layout_height="55dp"
                    android:justificationMode="inter_word"
                    android:src="@drawable/pregunta3"
                    app:layout_constraintBottom_toBottomOf="@+id/btnR2"
                    app:layout_constraintStart_toStartOf="@+id/guideline12"
                    app:layout_constraintTop_toTopOf="@+id/btnR2"
                    app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnR2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/Pregunta3"
                    app:layout_constraintEnd_toStartOf="@+id/guideline11"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imQ3"
                    app:layout_constraintTop_toBottomOf="@+id/tvResp1" />

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvResp3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="#706563"
                    android:justificationMode="inter_word"
                    android:text="@string/Resp3"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/guideline11"
                    app:layout_constraintStart_toStartOf="@+id/guideline12"
                    app:layout_constraintTop_toBottomOf="@+id/btnR3" />

            <ImageView
                    android:id="@+id/imQ4"
                    android:layout_width="51dp"
                    android:layout_height="52dp"
                    android:src="@drawable/pregunta4"
                    app:layout_constraintBottom_toBottomOf="@+id/btnR4"
                    app:layout_constraintStart_toStartOf="@+id/guideline12"
                    app:layout_constraintTop_toTopOf="@+id/btnR4"
                    app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnR4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/Pregunta4"
                    app:layout_constraintEnd_toStartOf="@+id/guideline11"
                    app:layout_constraintStart_toEndOf="@+id/imQ4"
                    app:layout_constraintTop_toBottomOf="@+id/tvResp3" />

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvResp4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Resp4"
                    android:visibility="gone"
                    android:textColor="#706563"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toStartOf="@+id/guideline11"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline12"
                    app:layout_constraintTop_toBottomOf="@+id/btnR4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>