<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.ConceptosFragment">

        <pl.bclogic.pulsator4droid.library.PulsatorLayout
                android:id="@+id/info_img"
                android:layout_width="@dimen/iconos_conceptos"
                android:layout_height="@dimen/iconos_conceptos"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"

                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                app:pulse_color="@color/pulse"
                app:pulse_count="2"
                app:pulse_duration="750"
                app:pulse_interpolator="Linear"
                app:pulse_repeat="0"
                app:pulse_startFromScratch="false">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/informacion"
                    
                    android:src="@drawable/informacion"
                    app:srcCompat="@drawable/informacion" />
        </pl.bclogic.pulsator4droid.library.PulsatorLayout>

        <pl.bclogic.pulsator4droid.library.PulsatorLayout
                android:id="@+id/quiero_img"
                android:layout_width="@dimen/iconos_conceptos"
                android:layout_height="@dimen/iconos_conceptos"
                android:layout_marginEnd="@dimen/margin_end"

                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/info_img"
                app:pulse_color="@color/pulse"
                app:pulse_count="4"
                app:pulse_duration="1000"
                app:pulse_interpolator="Linear"
                app:pulse_repeat="0"
                app:pulse_startFromScratch="false">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/que_quiero"
                    
                    android:src="@drawable/quiero"
                    app:srcCompat="@drawable/quiero" />

        </pl.bclogic.pulsator4droid.library.PulsatorLayout>

        <pl.bclogic.pulsator4droid.library.PulsatorLayout
                android:id="@+id/decoracion_img"
                android:layout_width="@dimen/iconos_conceptos"
                android:layout_height="@dimen/iconos_conceptos"
                android:layout_marginStart="@dimen/margin_start"
                
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quiero_img"

                app:pulse_color="@color/pulse"
                app:pulse_count="4"
                app:pulse_duration="1000"
                app:pulse_interpolator="Linear"
                app:pulse_repeat="0"
                app:pulse_startFromScratch="false">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/decoracion"
                    
                    android:src="@drawable/decoracion"
                    app:srcCompat="@drawable/decoracion" />

        </pl.bclogic.pulsator4droid.library.PulsatorLayout>

        <pl.bclogic.pulsator4droid.library.PulsatorLayout
                android:id="@+id/cotizacion_img"
                android:layout_width="@dimen/iconos_conceptos"
                android:layout_height="@dimen/iconos_conceptos"
                android:layout_marginEnd="@dimen/margin_end"
                
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/decoracion_img"

                app:pulse_color="@color/pulse"
                app:pulse_count="4"
                app:pulse_duration="1000"
                app:pulse_interpolator="Linear"
                app:pulse_repeat="0"
                app:pulse_startFromScratch="false">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cotizacion"
                    
                    android:src="@drawable/cotizacion"
                    app:srcCompat="@drawable/cotizacion" />
        </pl.bclogic.pulsator4droid.library.PulsatorLayout>

        <pl.bclogic.pulsator4droid.library.PulsatorLayout
                android:id="@+id/compartir_img"
                android:layout_width="@dimen/iconos_conceptos"
                android:layout_height="@dimen/iconos_conceptos"
                android:layout_marginStart="@dimen/margin_start"
                
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cotizacion_img"

                app:pulse_color="@color/pulse"
                app:pulse_count="4"
                app:pulse_duration="1000"
                app:pulse_interpolator="Linear"
                app:pulse_repeat="0"
                app:pulse_startFromScratch="false">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/guardar_compartir"
                    
                    android:src="@drawable/compartir"
                    app:srcCompat="@drawable/compartir" />
        </pl.bclogic.pulsator4droid.library.PulsatorLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/siguiente_fragmento"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="@dimen/margin_end"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="@string/siguiente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
                android:id="@+id/flecha1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/flecha_siguiente_paso"
                android:rotation="@dimen/rotacion_izquierda"
                app:layout_constraintBottom_toTopOf="@+id/quiero_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_img"
                app:srcCompat="@drawable/flecha_azul" />

        <ImageView
                android:id="@+id/flecha2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/flecha_siguiente_paso"
                android:rotation="@dimen/rotacion_derecha"
                app:layout_constraintBottom_toTopOf="@+id/decoracion_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quiero_img"
                app:srcCompat="@drawable/flecha_azul" />

        <ImageView
                android:id="@+id/flecha3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/flecha_siguiente_paso"
                android:rotation="@dimen/rotacion_izquierda"
                app:layout_constraintBottom_toTopOf="@+id/cotizacion_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/decoracion_img"
                app:srcCompat="@drawable/flecha_azul" />

        <ImageView
                android:id="@+id/flecha4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/flecha_siguiente_paso"
                android:rotation="@dimen/rotacion_derecha"
                app:layout_constraintBottom_toTopOf="@+id/compartir_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cotizacion_img"
                app:srcCompat="@drawable/flecha_azul" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>